@@ -51,4 +51,9 @@
 		opt_commit_order_arg, (diffargs), (revargs), \
 		"--", (fileargs), NULL
 
+/* FIXME(jfonseca): This is incomplete, but enough to support:
+ * git rev-list --author=vivien HEAD | tig --stdin --no-walk */
+#define GIT_REV_FLAGS \
+	"--stdin", "--no-walk"
+
 #endif
